# Experiments

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  Main.cpp  README.md  Startup.bat
ext/assimp/lib/cmake/assimp-5.0/: assimpTargets-debug.cmake  assimpTargets-release.cmake
ext/assimp/lib/cmake/assimp-5.2/: assimpTargets-release.cmake
ext/assimp/lib/pkgconfig/: assimp.pc
ext/dearimgui/: imgui_demo.cpp
ext/dearimgui/imgui-master/examples/example_glfw_opengl3/: main.cpp
ext/glfw_/lib/pkgconfig/: glfw3.pc
ext/imgui_plot/: imgui_plot.cpp
resources/models/Bistro/Interior/: interior.mtl
resources/models/Sponza/: sponza.mtl
resources/textures/SSDO/: Blurred.hdr
shaders/: unlit.frag  unlit.vert
shaders/Boids/: points.vert
shaders/CSM/: MeshShader.frag  shadowMap.frag  shadowMap.geom  shadowMap.vert
shaders/DeferredDecals/: MeshShader.frag  MeshShader.vert  decal.frag  decal.vert  quad.frag
shaders/DispMapping/: MeshShader.frag  MeshShader.vert
shaders/ISM/: deferred.frag  gBuffer.frag  indirect.frag  indirect.vert  pointCloud.frag  pointCloud.vert  rsm.frag  rsm.vert
shaders/KuwaharaFIlter/: Filter.frag
shaders/LPV/: MeshShader.frag  MeshShader.vert  gBuffer.frag  gBuffer.vert  lightInjection.frag  lightInjection.geom  lightInjection.vert  propagation.frag  propagation.geom  propagation.vert  rsmGBuffer.frag  rsmGBuffer.vert  shadow.vert
shaders/MeshManipulation/: MeshShader.frag  MeshShader.vert  WireframeShader.frag
shaders/NBodies/: nbodies.compute  points.frag  points.geom  points.vert
shaders/OIT/: Accumulation.frag  Accumulation.vert  Composite.frag  Composite.vert  MeshShader.frag  Resolve.frag
shaders/Ocean_FFT/: ButterflyTexture.compute  copyTexture.compute  displacement.compute  emptyTexture.compute  ifft.compute  normals.compute  ocean.frag  ocean.vert  wave.compute
shaders/PathTracer/: image.compute  image.frag  texture.frag
shaders/PicFlipFluid/: AdvectParticles.compute  ApplyForces.compute  ApplyTransferToGrid.compute  BlurDepth.compute  Common.compute  GridProjection.compute  GridToParticle.compute  JacobiIteration.compute  PressureGuess.compute  PressureUpdate.compute  ResetGrid.compute  TransferAccumulation.compute  points.frag  points.geom  points.vert  quad.frag
shaders/PostProcessing/: renderGBuffer.frag  renderGBuffer.vert  resolveGBuffer.frag
shaders/PostProcessing/PostProcesses/: Blit.compute  CRT.compute  ChromaticAberation.compute  ContrastBrightness.compute  DepthOfField.compute  DepthOfFieldCoc.compute  DepthOfFieldCombine.compute  DepthOfFieldPrefilterCoc.compute  GodRays.compute  GodRays.cpp  Grain.compute  GrayScale.compute  Pixelize.compute  Sharpen.compute  ToneMapping.compute  Vignette.compute
shaders/RSM/: MeshShader.frag  gBuffer.frag  gBuffer.vert  rsmGBuffer.frag  rsmGBuffer.vert
shaders/SH/: points.frag  points.vert
shaders/SSAO/: SSAO.frag  blur.frag  renderGBuffer.frag  renderGBuffer.vert  resolveGBuffer.frag
shaders/SSDO/: SSDO.frag  blur.frag  blur.vert  renderGBuffer.frag  renderGBuffer.vert  resolveGBuffer.frag
shaders/SSR/: blur.compute  renderGBuffer.frag  renderGBuffer.vert  resolveGBuffer.frag  ssr.frag
shaders/SSSS/: Blur.compute  MeshShader.frag  MeshShader.vert  depthPass.frag  depthPass.vert
shaders/SVGF/: Filter.compute  Image1.compute  Image2.compute  TAA.compute  texture.vert
shaders/SVO/: octreeTracer.frag  quad.vert  tagNode.comp  voxelization.frag  voxelization.vert  voxelizer.frag  voxelizer.geom  voxelizer.vert
shaders/SVT/: MeshShader.frag  visibility.frag
shaders/ShellFur/: MeshShader.frag  MeshShader.vert
shaders/Template/: MeshShader.frag
shaders/TiledRendering/: ActiveClusteredLightCulling.compute  AnimateLights.compute  BuildClusterList.compute  BuildClusters.compute  ClusteredLightCulling.compute  FindActiveClusters.compute  MeshShader.frag  MeshShader.vert  computeTiles.compute  depthPrepass.frag  depthPrepass.vert  renderGBuffer.frag  renderGBuffer.vert  resolveGBuffer.frag
shaders/bitonicSort/: bitonicSort.compute  matrixTranspose.compute
shaders/vxgi/: MeshShader.frag  MeshShader.vert  voxelization.geom
src/: Common.h
src/Demos/: Demo.hpp
src/Demos/BitonicSort/: BitonicSort.cpp  BitonicSort.hpp  Infos
src/Demos/Boids/: Boids.cpp  Boids.hpp
src/Demos/CSM/: CSM.cpp  CSM.hpp  Info
src/Demos/DeferredDecals/: DeferredDecals.cpp  DeferredDecals.hpp  Info
src/Demos/DispMapping/: DispMapping.cpp  DispMapping.hpp
src/Demos/FFT/: FFT.cpp  FFT.hpp  Infos
src/Demos/ISM/: ISM.cpp  ISM.hpp
src/Demos/KuwaharaFilter/: Info  KuwaharaFilter.cpp  KuwaharaFilter.hpp
src/Demos/LPV/: LPV.cpp  LPV.hpp
src/Demos/MeshManipulation/: Info  MeshManipulation.cpp  MeshManipulation.hpp
src/Demos/NBodies/: Infos  NBodies.cpp  NBodies.hpp
src/Demos/OIT/: Info  OIT.cpp  OIT.hpp
src/Demos/Ocean_FFT/: Ocean_FFT.cpp  Ocean_FFT.hpp
src/Demos/PathTracer/: PathTracer.cpp  PathTracer.hpp
src/Demos/PicFlipFluid/: PicFlipFluid.cpp  PicFlipFluid.hpp  algo.py
src/Demos/PostProcessing/: PostProcessing.cpp  PostProcessing.hpp
src/Demos/RSM/: Infos  RSM.cpp  RSM.hpp
src/Demos/SH/: Infos  SH.cpp  SH.hpp
src/Demos/SSAO/: INfo  SSAO.cpp  SSAO.hpp
src/Demos/SSDO/: INfo  SSDO.cpp  SSDO.hpp
src/Demos/SSR/: Info  SSR.cpp  SSR.hpp
src/Demos/SSSS/: SSSS.cpp  SSSS.hpp
src/Demos/SVGF/: ComputeAlgo  SVGF.cpp  SVGF.hpp
src/Demos/SVI/: Algo.cpp  Untitled-1.cpp
src/Demos/SVO/: SVO.cpp  SVO.hpp
src/Demos/SVT/: SVT.cpp  SVT.hpp  Steps
src/Demos/ShellFur/: ShellFur.cpp  ShellFur.hpp
src/Demos/Template/: Template.cpp  Template.hpp
src/Demos/TiledRendering/: Infos  TiledRendering.cpp  TiledRendering.hpp
src/Demos/VXGI/: Infos  VXGI.cpp  VXGI.hpp
src/GL_Helpers/: GL_Camera.cpp  GL_Camera.hpp  GL_Material.cpp  GL_Material.hpp  GL_Mesh.cpp  GL_Mesh.hpp  GL_Shader.cpp  GL_Shader.hpp  GL_Texture.hpp  Scene.hpp  Util.cpp  Util.hpp
